// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup />  snapshots renders RadioGroup in a column and with a label 1`] = `
<div
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id="-field-label"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup />  snapshots renders RadioGroup in a column and with a label 2`] = `
<div
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id="-field-label"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup />  snapshots renders RadioGroup in a row and with a label 1`] = `
<div
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id="-field-label"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup />  snapshots renders RadioGroup with radios 1`] = `
<div
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id="-field-label"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
  <div
    class="container"
  >
    <label
      class="label radio"
      data-automation-id="radio-1-field-label"
      for="radio-1"
      id="radio-1-field-label"
    >
      <span>
        <input
          class="radioInput"
          data-automation-id="radio-1-radio-input"
          id="radio-1"
          name="radio"
          readonly=""
          type="radio"
          value="radio-1"
        />
        <span
          class="box"
        />
      </span>
      <span
        class="appendedLabel"
      >
        Label 1
      </span>
    </label>
  </div>
  <div
    class="container"
  >
    <label
      class="label radio"
      data-automation-id="radio-2-field-label"
      for="radio-2"
      id="radio-2-field-label"
    >
      <span>
        <input
          class="radioInput"
          data-automation-id="radio-2-radio-input"
          id="radio-2"
          name="radio"
          readonly=""
          type="radio"
          value="radio-2"
        />
        <span
          class="box"
        />
      </span>
      <span
        class="appendedLabel"
      >
        Label 2
      </span>
    </label>
  </div>
</div>
`;
